--- a/data/coco.yaml
+++ b/data/coco.yaml
@@ -9,12 +9,16 @@
 
 # Train/val/test sets as 1) dir: path/to/imgs, 2) file: path/to/imgs.txt, or 3) list: [path/to/imgs1, path/to/imgs2, ..]
 # path: ../datasets/coco  # dataset root dir
-train: ./0_file/train  # train images (relative to 'path') 118287 images
-val: ./0_file/valid  # val images (relative to 'path') 5000 images
-test: ./0_file/test  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
+train: ./data/images/train  # train images (relative to 'path') 118287 images
+val: ./data/images/valid  # val images (relative to 'path') 5000 images
+test: ./data/images/test  # 20288 of 40670 images, submit to https://competitions.codalab.org/competitions/20794
 
 # Classes
+# train.py --img 416 --epochs 100 --data coco.yaml  -weights yolov5s.pt
+# train.py --img 416 --epochs 100 --data coco.yaml  -weights motorcycle.pt
 names:
   0: Motorcycle
   1: Motorcycle+Driver
+# names:
+#   0: Helmet
   
